fixing about alignment

--- a/about.css
+++ b/about.css
@@ -59,6 +59,7 @@ body {
 	padding-left: 200px;
 	padding-right: 200px;
 	top: 100px;
+	vertical-align: center;
 }
 
 .table-bio img {
